--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,4 +52,6 @@
   </div>
 </nav>
 
-<!-- <router-outlet></router-outlet> -->
+<h3>Order List</h3>
+<app-list-order></app-list-order>
+<router-outlet></router-outlet>
